[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/Weapons/Whip/Whip.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Misc/RectangleCast.gd" type="Script" id=2]
[ext_resource path="res://Sprite/Animations/Whipe normal animation.tres" type="SpriteFrames" id=3]

[node name="Whip" type="Node2D"]
script = ExtResource( 1 )
HitBox = Vector2( 25, 10 )

[node name="WeaponCoolDown" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="WhipTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackCast" type="Node2D" parent="."]
script = ExtResource( 2 )
CollisionMask = [ 2 ]
MaxCollisions = 100

[node name="TweenShape" type="Tween" parent="."]
unique_name_in_owner = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 1, 0.5 )
frames = ExtResource( 3 )
animation = "idle"
frame = 2
playing = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="OnAnimationFinished"]
